tests/e2e/testdata/04_multiple_target_and_policy/policy2.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deployment-validator
spec:
  failurePolicy: Fail
  validations:
    - expression: "has(object.metadata.labels)"
      message: "リソースにはラベルが必要です"
